# web_modul_9

./: 1.txt  2.txt  README.md  pyproject.toml
Scrapy/: main.py
Scrapy/json_data/: quotes.json
beautiful_soup/: main.py  soup.py
beautiful_soup/json_data/: authors.json  quotes.json
